# beschi

./: .gitignore  LICENSE.txt  Makefile  README.md  example.py  generate.py  protocol.toml  setup.py  todo.md  verify.py
.github/workflows/: ci.yml
beschi/: __init__.py  cli.py  protocol.py  writer.py
beschi/writers/: __init__.py  assemblyscript.py  c.py  csharp.py  go.py  python.py  rust.py  swift.py  typescript.py  zig.py
docs/: introduction.md  protocols.md  todo.md
docs/dev/: todo.md  writers.md
docs/generated_examples/: assemblyscript_example.ts  c_example.h  csharp_example.cs  go_example.go  readme.md  rust_example.rs  swift_example.swift  typescript_example.ts  zig_example.zig
docs/languages/: assemblyscript.md  c.md  csharp.md  go.md  python.md  rust.md  swift.md  typescript.md  zig.md
generator/: __init__.py  protocol.py  writer.py
generator/writers/: csharp.py  (+3 more)
scripts/: example.py  generate_examples.sh  tag_release.sh  verify.py
test/: 00_compare_all_messages.py  01_basic_test.py  02_protocol_verification_test.py  03_generation_test.py  04_verification_test.py  05_broken_messages_test.py  06_multiple_message_test.py  07_sized_messages_test.py  08_uninitialized_test.py  09_packed_test.py  conftest.py  example.json  test_util.py
test/_harnesses/rust/: .gitignore  Cargo.toml  builder.py  caveats.txt
test/_harnesses/rust/src/: basic.rs  broken.rs  multiple.rs  multiple_broken.rs  packed.rs  packed_broken.rs  sized.rs  truncated.rs  uninitialized.rs  util.rs
test/_harnesses/rust/src/basic/: main.rs
test/_harnesses/rust/src/play/: main.rs
(+200 files in other folders)
