[package]
name = "rust-harness"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic"
path = "src/basic.rs"

[[bin]]
name = "broken"
path = "src/broken.rs"

[[bin]]
name = "truncated"
path = "src/truncated.rs"

[[bin]]
name = "multiple"
path = "src/multiple.rs"

[[bin]]
name = "multiple_broken"
path = "src/multiple_broken.rs"

[dependencies]
