[package]
name = "rust-harness"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic"
path = "src/basic.rs"

[[bin]]
name = "broken"
path = "src/broken.rs"

[[bin]]
name = "truncated"
path = "src/truncated.rs"

[[bin]]
name = "multiple"
path = "src/multiple.rs"

[[bin]]
name = "multiple_broken"
path = "src/multiple_broken.rs"

[[bin]]
name = "sized"
path = "src/sized.rs"

[[bin]]
name = "uninitialized"
path = "src/uninitialized.rs"

[[bin]]
name = "packed"
path = "src/packed.rs"

[[bin]]
name = "packed_broken"
path = "src/packed_broken.rs"

[dependencies]
